--- a/Preprocessing.Rmd
+++ b/Preprocessing.Rmd
@@ -14,8 +14,7 @@ packages.check <- lapply(requiredPackages, FUN = function(x) {
     library(x, character.only = TRUE)
   }
 })
-
-PROJECT_PATH="~/Documents/UPC/1Q/MultivariateAnalysis_MVVA/Labs/MultivariantAnalysis_IBMDataset"
+PROJECT_PATH="C:/Users/jordi/Documents/GitHub/MultivariantAnalysis_IBMDataset"
 setwd(PROJECT_PATH)
 
 ```
